[package]
name = "wifi-rs"
version = "0.2.3"
edition = "2018"
authors = ["Tochukwu Nkemdilim <hi@toks.dev>"]
description = "Interface with and manage Wireless Network (WiFi)"
license = "MIT"
keywords = ["wifi", "network", "wireless"]
categories = ["api-bindings", "network-programming"]
repository = "https://github.com/toksdotdev/wifi-rs"
readme = "README.md"

[target.'cfg(windows)'.dependencies]
tempfile = "3.0.2"
